--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 
 <body>
 
+
+    <main>
+        <section class="home">
+            <div class="home-data">
+                <h1 class="home-title">Conmebol <br />Copa America <br />2021</h1>
+                <a href="#">Watch Live</a>
+            </div>
+            <div class="home-img">
+                <img src="./images/banner1.png" alt="banner" srcset="">
+            </div>
+
+        </section>
+
+    </main>
 </body>
 
 </html>
