--- a/index.html
+++ b/index.html
@@ -24,6 +24,85 @@
 
         </section>
 
+
+        <section class="players-card">
+
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="./images/players/player-1.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-2.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-3.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-1.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-2.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-3.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-1.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-2.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-3.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-1.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-2.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="./images/players/player-3.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
