--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive football</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/307c3b44c1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -104,6 +105,24 @@
         </section>
 
     </main>
+
+
+    <footer>
+        <div class="footer">
+            <div> <img src="./images/Logo.png" alt="footer logo" srcset=""></div>
+
+
+            <div class="social-icon">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-discord"></i>
+
+            </div>
+
+            <p style="width: 236px; height: 32px;">Copyright &#169; 2022 Football</p>
+        </div>
+    </footer>
 </body>
 
 </html>
