tablet responsive added

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
             </div>
 
-            <p style="width: 236px; height: 32px;">Copyright &#169; 2022 Football</p>
+            <p>Copyright &#169; 2022 Football</p>
         </div>
     </footer>
 </body>
