--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <section class="home">
             <div class="home-data">
                 <h1 class="home-title">Conmebol <br />Copa America <br />2021</h1>
-                <a href="#">Watch Live</a>
+                <!-- <a id="button" href="#">Watch Live</a> -->
+                <button class="button"><span>Watch Live </span></button>
             </div>
             <div class="home-img">
                 <img src="./images/banner1.png" alt="banner" srcset="">
