news section added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,150 @@
             </div>
         </section>
 
+        <section class="featured-videos">
+            <h1 class=" section-title">Featured Videos</h1>
+            <div class="video-container">
+                <div class="video-item">
+                    <div class="play-video"> <img src="./images/3.jpg" alt="">
+                    </div>
+                    <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
+                    </div>
+                    <div class="video-details">
+                        <p class="video-category">Neymar Jr</p>
+                        <p class="video-title">Inside Training: Squad returns for first full pre-season session in
+                            Austria
+                        </p>
+                        <p class="video-date">15th Jul 2021</p>
+                    </div>
+
+                </div>
+
+                <div class="video-item">
+                    <div class="play-video"> <img src="./images/3.jpg" alt="">
+                    </div>
+                    <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
+                    </div>
+
+                    <p class="video-category">Neymar Jr</p>
+                    <p class="video-title">Inside Training: Squad returns for first full pre-season session in Austria
+                    </p>
+                    <p class="video-date">15th Jul 2021</p>
+                </div>
+
+
+                <div class="video-item">
+                    <div class="play-video"> <img src="./images/3.jpg" alt="">
+                    </div>
+                    <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
+                    </div>
+
+                    <p class="video-category">Neymar Jr</p>
+                    <p class="video-title">Inside Training: Squad returns for first full pre-season session in Austria
+                    </p>
+                    <p class="video-date">15th Jul 2021</p>
+                </div>
+                <div class="video-item">
+                    <div class="play-video"> <img src="./images/3.jpg" alt="">
+                    </div>
+                    <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
+                    </div>
+
+                    <p class="video-category">Neymar Jr</p>
+                    <p class="video-title">Inside Training: Squad returns for first full pre-season session in Austria
+                    </p>
+                    <p class="video-date">15th Jul 2021</p>
+                </div>
+
+
+
+            </div>
+        </section>
+
+
+        <section class="latest-news">
+            <h1 class=" section-title">Latest News</h1>
+            <div class="news-container">
+                <div class="news-item">
+                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    </div>
+                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+                    <div class="news-details">
+                        <span>14h ago</span>
+                        <p class="news-headline">
+                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                        </p>
+
+                    </div>
+
+                </div>
+                <div class="news-item">
+                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    </div>
+                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+                    <div class="news-details">
+                        <span>14h ago</span>
+                        <p class="news-headline">
+                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                        </p>
+
+                    </div>
+
+                </div>
+                <div class="news-item">
+                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    </div>
+                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+                    <div class="news-details">
+                        <span>14h ago</span>
+                        <p class="news-headline">
+                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                        </p>
+
+                    </div>
+
+                </div>
+                <div class="news-item">
+                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    </div>
+                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+                    <div class="news-details">
+                        <span>14h ago</span>
+                        <p class="news-headline">
+                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                        </p>
+
+                    </div>
+
+                </div>
+                <div class="news-item">
+                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    </div>
+                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+                    <div class="news-details">
+                        <span>14h ago</span>
+                        <p class="news-headline">
+                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                        </p>
+
+                    </div>
+
+                </div>
+                <div class="news-item">
+                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    </div>
+                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+                    <div class="news-details">
+                        <span>14h ago</span>
+                        <p class="news-headline">
+                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                        </p>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
     </main>
 
 
