--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive football</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/307c3b44c1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-
+    <!-- main section -->
     <main>
-        <section class="home">
+        <!-- first section or home banner section -->
+        <section class="home-section">
             <div class="home-data">
                 <h1 class="home-title">Conmebol <br />Copa America <br />2021</h1>
-                <!-- <a id="button" href="#">Watch Live</a> -->
-                <button class="button"><span>Watch Live </span></button>
+                <!-- animated button -->
+                <a href="https://www.liverpoolfc.com/"> <button class="button"><span>Watch Live </span></button></a>
+
             </div>
             <div class="home-img">
                 <img src="./images/banner1.png" alt="banner" srcset="">
@@ -26,85 +30,87 @@
 
         </section>
 
+        <!-- players grid Section  -->
+        <section class="players-section">
 
-        <section class="players-card">
+            <div class="players-container">
+                <div class="player">
+                    <img src="./images/players/player-1.png" alt="">
+                    <h1>Neymar Jr</h1>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer.</p>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-2.png" alt="">
+                    <h1>Lionel Messi</h1>
+                    <p>Lionel Andrés Messi is an Argentine professional footballer </p>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-3.png" alt="">
+                    <h1>Cristiano Ronaldo</h1>
+                    <p>Cristiano Ronaldo is an Argentine professional footballer </p>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-4.png" alt="">
+                    <h1>Paulo Dybala</h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-5.png" alt="">
+                    <h1>Mesut Ozil </h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-6.png" alt="">
+                    <h1>Mauro Icardi </h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-7.png" alt="">
+                    <h1>Di Maria</h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
+                </div>
+                <div class="player">
+                    <img src="./images/players/player-8.png" alt="">
+                    <h1>Kylian Mbappé</h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team.</p>
+                </div>
 
-            <div class="grid-container">
-                <div class="grid-item">
-                    <img src="./images/players/player-1.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
+
+
+                <div class="player">
+                    <img src="./images/players/player-9.png" alt="">
+                    <h1>Mohamed Salah</h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
                 </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-2.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
+                <div class="player">
+                    <img src="./images/players/player-10.png" alt="">
+                    <h1>Harry Kane</h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
                 </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-3.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
+                <div class="player">
+                    <img src="./images/players/player-11.png" alt="">
+                    <h1>Kevin De Bruyne</h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
                 </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-1.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-2.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-3.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-1.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-2.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-3.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-1.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-2.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="./images/players/player-3.png" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
-                        nisi lectus at.</p>
+
+                <div class="player">
+                    <img src="./images/players/player-12.png" alt="">
+                    <h1>Philippe Coutinho</h1>
+                    <p>Professional footballer who plays as a forward for Serie A club Juventus and the Argentina
+                        national team</p>
                 </div>
             </div>
         </section>
 
+        <!-- Featured Videos Section -->
         <section class="featured-videos">
             <h1 class=" section-title">Featured Videos</h1>
             <div class="video-container">
@@ -114,49 +120,52 @@
                     <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
                     </div>
                     <div class="video-details">
-                        <p class="video-category">Neymar Jr</p>
-                        <p class="video-title">Inside Training: Squad returns for first full pre-season session in
-                            Austria
+                        <p class="video-category">Training</p>
+                        <p class="video-title">It's about starting again with all you can It's about starting again with
+                            all
+                            you can
                         </p>
-                        <p class="video-date">15th Jul 2021</p>
+                        <p class="video-date">23th Jul 2021</p>
                     </div>
 
                 </div>
 
                 <div class="video-item">
-                    <div class="play-video"> <img src="./images/3.jpg" alt="">
+                    <div class="play-video"> <img src="./images/video2.jpg" alt="">
                     </div>
                     <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
                     </div>
 
-                    <p class="video-category">Neymar Jr</p>
-                    <p class="video-title">Inside Training: Squad returns for first full pre-season session in Austria
-                    </p>
-                    <p class="video-date">15th Jul 2021</p>
+                    <p class="video-category">Interview</p>
+                    <p class="video-title">It's about starting again with all you can It's about starting again with all
+                        you can
+                    <p class="video-date">12th Jul 2021</p>
                 </div>
 
 
                 <div class="video-item">
-                    <div class="play-video"> <img src="./images/3.jpg" alt="">
+                    <div class="play-video"> <img src="./images/video1.jpg" alt="">
                     </div>
                     <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
                     </div>
 
-                    <p class="video-category">Neymar Jr</p>
-                    <p class="video-title">Inside Training: Squad returns for first full pre-season session in Austria
+                    <p class="video-category">Interview</p>
+                    <p class="video-title">It's about starting again with all you can It's about starting again with all
+                        you can
                     </p>
-                    <p class="video-date">15th Jul 2021</p>
+                    <p class="video-date">18th Jul 2021</p>
                 </div>
                 <div class="video-item">
-                    <div class="play-video"> <img src="./images/3.jpg" alt="">
+                    <div class="play-video"> <img src="./images/video2.jpg" alt="">
                     </div>
                     <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" />
                     </div>
 
-                    <p class="video-category">Neymar Jr</p>
-                    <p class="video-title">Inside Training: Squad returns for first full pre-season session in Austria
+                    <p class="video-category">Interview</p>
+                    <p class="video-title">It's about starting again with all you can It's about starting again with all
+                        you can
                     </p>
-                    <p class="video-date">15th Jul 2021</p>
+                    <p class="video-date">16th Jul 2021</p>
                 </div>
 
 
@@ -164,14 +173,14 @@
             </div>
         </section>
 
-
+        <!-- Latest News Section  -->
         <section class="latest-news">
             <h1 class=" section-title">Latest News</h1>
             <div class="news-container">
                 <div class="news-item">
-                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    <div class="news-thumbnail"> <img src="./images/news5.png" alt="">
                     </div>
-                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+
                     <div class="news-details">
                         <span>14h ago</span>
                         <p class="news-headline">
@@ -182,11 +191,11 @@
 
                 </div>
                 <div class="news-item">
-                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    <div class="news-thumbnail"> <img src="./images/news4.png" alt="">
                     </div>
-                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+
                     <div class="news-details">
-                        <span>14h ago</span>
+                        <span>1h ago</span>
                         <p class="news-headline">
                             Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
                         </p>
@@ -195,11 +204,11 @@
 
                 </div>
                 <div class="news-item">
-                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    <div class="news-thumbnail"> <img src="./images/news6.png" alt="">
                     </div>
-                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+
                     <div class="news-details">
-                        <span>14h ago</span>
+                        <span>10h ago</span>
                         <p class="news-headline">
                             Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
                         </p>
@@ -208,39 +217,39 @@
 
                 </div>
                 <div class="news-item">
-                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    <div class="news-thumbnail"> <img src="./images/news7.png" alt="">
                     </div>
-                    <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
+
                     <div class="news-details">
-                        <span>14h ago</span>
+                        <span>13h ago</span>
                         <p class="news-headline">
-                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                            'I'm training with the world's best set of defenders
                         </p>
 
                     </div>
 
                 </div>
                 <div class="news-item">
-                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    <div class="news-thumbnail"> <img src="./images/news8.png" alt="">
                     </div>
                     <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
                     <div class="news-details">
-                        <span>14h ago</span>
+                        <span>5h ago</span>
                         <p class="news-headline">
-                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                            Klopp Q&A: Pre-season, a chance to impress and being stronger
                         </p>
 
                     </div>
 
                 </div>
                 <div class="news-item">
-                    <div class="news-thumbnail"> <img src="./images/news1.png" alt="">
+                    <div class="news-thumbnail"> <img src="./images/news2.png" alt="">
                     </div>
                     <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
                     <div class="news-details">
-                        <span>14h ago</span>
+                        <span>4h ago</span>
                         <p class="news-headline">
-                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                            Klopp Q&A: Pre-season, a chance to impress and being stronger
                         </p>
 
                     </div>
@@ -252,6 +261,9 @@
     </main>
 
 
+
+
+    <!-- Footer Section -->
     <footer>
         <div class="footer">
             <div> <img src="./images/Logo.png" alt="footer logo" srcset=""></div>
