social link added

--- a/index.html
+++ b/index.html
@@ -270,10 +270,12 @@
 
 
             <div class="social-icon">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-youtube"></i>
-                <i class="fab fa-discord"></i>
+
+                <a href="https://www.instagram.com/liverpoolfc/"> <i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/lfc"> <i class="fab fa-twitter"></i></a>
+                <a href="https://www.youtube.com/liverpoolfc"> <i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/LiverpoolFC"> <i class="fab fa-facebook"></i></a>
+
 
             </div>
 
