--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
                     </div>
                     <div class="video-details">
                         <p class="video-category">Training</p>
-                        <p class="video-title">It's about starting again with all you can It's about starting again with
-                            all
-                            you can
-                        </p>
+                        <a
+                            href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                            <p class="video-title">It's about starting again with all you can It's about starting again
+                                with
+                                all
+                                you can
+                            </p>
+                        </a>
                         <p class="video-date">23th Jul 2021</p>
                     </div>
 
@@ -137,8 +141,12 @@
                     </div>
 
                     <p class="video-category">Interview</p>
-                    <p class="video-title">It's about starting again with all you can It's about starting again with all
-                        you can
+                    <a
+                        href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                        <p class="video-title">It's about starting again with all you can It's about starting again with
+                            all
+                            you can</p>
+                    </a>
                     <p class="video-date">12th Jul 2021</p>
                 </div>
 
@@ -150,9 +158,13 @@
                     </div>
 
                     <p class="video-category">Interview</p>
-                    <p class="video-title">It's about starting again with all you can It's about starting again with all
-                        you can
-                    </p>
+                    <a
+                        href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                        <p class="video-title">It's about starting again with all you can It's about starting again with
+                            all
+                            you can
+                        </p>
+                    </a>
                     <p class="video-date">18th Jul 2021</p>
                 </div>
                 <div class="video-item">
@@ -162,9 +174,17 @@
                     </div>
 
                     <p class="video-category">Interview</p>
-                    <p class="video-title">It's about starting again with all you can It's about starting again with all
-                        you can
-                    </p>
+
+                    <a
+                        href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                        <p class="video-title">It's about starting again with all you can It's about starting again with
+                            all
+                            you can
+                        </p>
+                    </a>
+
+
+
                     <p class="video-date">16th Jul 2021</p>
                 </div>
 
@@ -183,9 +203,13 @@
 
                     <div class="news-details">
                         <span>14h ago</span>
-                        <p class="news-headline">
-                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
-                        </p>
+                        <a
+                            href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                            <p class="news-headline">
+                                Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                            </p>
+                        </a>
+
 
                     </div>
 
@@ -196,22 +220,35 @@
 
                     <div class="news-details">
                         <span>1h ago</span>
-                        <p class="news-headline">
-                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
-                        </p>
+                        <a
+                            href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                            <p class="news-headline">
+                                Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                            </p>
+                        </a>
+
 
                     </div>
 
                 </div>
                 <div class="news-item">
+
+
                     <div class="news-thumbnail"> <img src="./images/news6.png" alt="">
+
+
                     </div>
 
                     <div class="news-details">
                         <span>10h ago</span>
-                        <p class="news-headline">
-                            Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
-                        </p>
+
+                        <a
+                            href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                            <p class="news-headline">
+                                Jürgen Klopp: I'm really happy to have Ibrahima Konate with us
+                            </p>
+                        </a>
+
 
                     </div>
 
@@ -222,9 +259,14 @@
 
                     <div class="news-details">
                         <span>13h ago</span>
-                        <p class="news-headline">
-                            'I'm training with the world's best set of defenders
-                        </p>
+
+                        <a
+                            href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                            <p class="news-headline">
+                                'I'm training with the world's best set of defenders
+                            </p>
+                        </a>
+
 
                     </div>
 
@@ -235,9 +277,13 @@
                     <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
                     <div class="news-details">
                         <span>5h ago</span>
-                        <p class="news-headline">
-                            Klopp Q&A: Pre-season, a chance to impress and being stronger
-                        </p>
+                        <a
+                            href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                            <p class="news-headline">
+                                Klopp Q&A: Pre-season, a chance to impress and being stronger
+                            </p>
+                        </a>
+
 
                     </div>
 
@@ -248,9 +294,14 @@
                     <!-- <div class="play"><img src="http://cdn1.iconfinder.com/data/icons/flavour/button_play_blue.png" /> -->
                     <div class="news-details">
                         <span>4h ago</span>
-                        <p class="news-headline">
-                            Klopp Q&A: Pre-season, a chance to impress and being stronger
-                        </p>
+
+                        <a
+                            href="https://www.liverpoolfc.com/news/first-team/437875-pep-lijnders-training-camp-diary-day-three">
+                            <p class="news-headline">
+                                Klopp Q&A: Pre-season, a chance to impress and being stronger
+                            </p>
+                        </a>
+
 
                     </div>
 
